Upgrade Django, add celery, swap yandex.translate to google.translate

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ django-annoying = "*"
 gunicorn = "*"
 dj-database-url = "*"
 psycopg2 = "*"
+redis = "*"
+google-cloud-translate = "*"
 
 [dev-packages]
 
