add media volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       <<: *common_environment
     volumes:
       - .:/code:cached
+      - media_data:./media
     ports:
       - "8000:8000"
     depends_on:
@@ -84,3 +85,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  media_data:
