--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     environment:
       <<: *common_environment
     volumes:
-      - .:/code:cached
+      - .:/usr/src/app:cached
     depends_on:
       - web
 
@@ -78,7 +78,7 @@ services:
     environment:
       <<: *common_environment
     volumes:
-      - .:/code:cached
+      - .:/usr/src/app:cached
     depends_on:
       - web
 
